[package]
name = "easeprobe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
dashmap = "6.1.0"
log = "0.4.22"
logforth = "0.23.1"
reqwest = "0.12.12"
scopeguard = "1.2.0"
tokio = { version = "1", features = ["full"] }
