[package]
name = "easeprobe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
chrono = "0.4.39"
clap = { version = "4.5.34", features = ["derive"] }
dashmap = "6.1.0"
humantime-serde = "1.1"
log = "0.4.27"
logforth = "0.23.1"
reqwest = "0.12.12"
schemars = { version = "0.8.22", features = ["chrono"] }
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
